[package]
name = "windows-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = {version = "0.29.0", features = ["user"]}
tokio = { version = "1.38.0", features = ["full"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
users = "0.11.0"
futures = "0.3.30"
input = "0.9.0"
evdev = { version = "0.12.1", features = ["tokio"]}
chrono = "0.4.38"
dbus-crossroads = "0.5.2"